Finish part 1, integration tests, unit tests, and bad tests examples

--- a/CreditScoringSystem/CreditScoringSystem.API/appsettings.Development.json
+++ b/CreditScoringSystem/CreditScoringSystem.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "EmploymentHistoryApi": {
+    "ApiBaseAddress": "http://localhost:5001"
   }
 }
