--- a/CreditScoringSystem/CreditScoringSystem.API/CreditScoringSystem.API.csproj
+++ b/CreditScoringSystem/CreditScoringSystem.API/CreditScoringSystem.API.csproj
@@ -5,11 +5,17 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <UserSecretsId>6610f336-a699-4aee-b31c-fc2173e64e7f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CreditScoringSystem.Application\CreditScoringSystem.Application.csproj" />
+    <ProjectReference Include="..\CreditScoringSystem.Infrastructure\CreditScoringSystem.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
