--- a/CreditScoringSystem/CreditScoringSystem.Application/CreditScoringSystem.Application.csproj
+++ b/CreditScoringSystem/CreditScoringSystem.Application/CreditScoringSystem.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CreditScoringSystem.Domain\CreditScoringSystem.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
