--- a/CreditScoringSystem/CreditScoringSystem.Infrastructure/CreditScoringSystem.Infrastructure.csproj
+++ b/CreditScoringSystem/CreditScoringSystem.Infrastructure/CreditScoringSystem.Infrastructure.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.6.1" />
+    <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
+    <PackageReference Include="Npgsql" Version="9.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CreditScoringSystem.Domain\CreditScoringSystem.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
