Refactor to vertical slices with passing integration tests. Unit test project does not build

--- a/CreditScoringSystem/CreditScoringSystem.API/CreditScoringSystem.API.csproj
+++ b/CreditScoringSystem/CreditScoringSystem.API/CreditScoringSystem.API.csproj
@@ -9,13 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.6.1" />
+    <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\CreditScoringSystem.Application\CreditScoringSystem.Application.csproj" />
-    <ProjectReference Include="..\CreditScoringSystem.Infrastructure\CreditScoringSystem.Infrastructure.csproj" />
+    <PackageReference Include="Npgsql" Version="9.0.2" />
   </ItemGroup>
 
 </Project>
