--- a/CreditScoringSystem/CreditScoringSystem.UnitTests/CreditScoringSystem.UnitTests.csproj
+++ b/CreditScoringSystem/CreditScoringSystem.UnitTests/CreditScoringSystem.UnitTests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Bogus" Version="35.6.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.9.2" />
