--- a/CreditScoringSystem/CreditScoringSystem.API/appsettings.Development.json
+++ b/CreditScoringSystem/CreditScoringSystem.API/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "EmploymentHistoryApi": {
     "ApiBaseAddress": "http://localhost:5001"
+  },
+  "ConnectionStrings": {
+    "CreditScoringSystem": "Host=localhost;Port=5432;Database=CreditScoringSystem;Username=postgres;Password=devbgdemodb"
   }
 }
