Re-implement unit tests, refactor

--- a/CreditScoringSystem/CreditScoringSystem.UnitTests/CreditScoringSystem.UnitTests.csproj
+++ b/CreditScoringSystem/CreditScoringSystem.UnitTests/CreditScoringSystem.UnitTests.csproj
@@ -19,6 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CreditScoringSystem.API\CreditScoringSystem.API.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
